testdata/fixtures/audit/positive/eval_user_input_js_member.js
function runExpression(req) {
  return eval(req.body.code);
}
