testdata/fixtures/audit/negative/sql_concat_neg_orm_js.js
async function getUser(prisma, userId) {
  return prisma.user.findUnique({ where: { id: userId } });
}
